--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   </head>
   <body>
     <h1>Luízo castro nere</h1>
-    <p></p>
+    <p>
+        Há momentos na vida em que as palavras parecem tão pequenas diante do amor
+         que sentimos. No Dia dos Pais, cada mensagem se transforma em algo mágico 
+         capaz de expressar toda a admiração que sentimos por quem nos ajudou a trilhar 
+         os caminhos da vida. Confira nossos textos para homenagear seu pai!
+    </p>
 		<br>
-		<p>Assinado:Nicolas_Rodrigues_Bahia</p>
+		<p>Assinado: Nicolas Rodrigues Bahia</p>
   </body>
 </html>
